--- a/project_report.qmd
+++ b/project_report.qmd
@@ -1,7 +1,7 @@
 ---
 title: "Your Data Science Project Title Here"
 author: "Group Member Names Here" 
-date: "Final Report Due Monday, March 18, 2024"
+date: "Final Report Due Monday, March 17, 2025"
 format: 
   html:
       theme: default
@@ -20,7 +20,7 @@ library(tidyverse)
 # Data import commands should be early
 ```
 
-<Headings below are just one suggestion. You can use your own structure but keep the rubric in mind>
+\<Headings below are just one suggestion. You can use your own structure but keep the rubric in mind\>
 
 # Introduction
 
@@ -32,17 +32,8 @@ library(tidyverse)
 
 ## Data-based insights
 
-## Critique 
+## Critique
 
 ## What would we do differently if starting over (or possibilities for further work with this data)
 
-
-
-
-
-
-
-
-
 # Conclusion
-
